# diploma_15

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tg_get_response.json  tg_send_response.json
.github/workflows/: build_and_push.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: .gitignore  runbot.py  test_bot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
github/workflows/: build_and_push.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
goals/views/: boards.py  categories.py  comments.py  goals.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: factories.py  login_test.py  profile_test.py  signup_test.py  update_password_test.py
tests/goals/: board_test.py  categories_test.py  category_test.py  factories.py  goal_test.py
todolist/: fields.py  settings.py  urls.py
