[tool.poetry]
name = "diploma-15"
version = "0.1.0"
description = ""
authors = ["Daniil Karlov <dskarlov@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
